change UI for fullscreen notification

--- a/android/src/main/res/values/strings.xml
+++ b/android/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="incoming_call">enna Video Call</string>
     <string name="answer">Answer</string>
     <string name="decline">Decline</string>
+    <string name="enna_profile_picture">Profile picture</string>
+    <string name="enna" translatable="false">enna</string>
 </resources>
