--- a/android/src/main/res/values-de-rDE/strings.xml
+++ b/android/src/main/res/values-de-rDE/strings.xml
@@ -3,4 +3,5 @@
     <string name="incoming_call">enna Videoanruf</string>
     <string name="answer">Annehmen</string>
     <string name="decline">Ablehnen</string>
+    <string name="enna_profile_picture">Profilbild</string>
 </resources>
